<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.appxi</groupId>
	<artifactId>cbeta-explorer</artifactId>
	<version>21.01.00</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>15</maven.compiler.source>
		<maven.compiler.target>15</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.appxi</groupId>
			<artifactId>appxi-javafx</artifactId>
			<version>21.01.00</version>
		</dependency>
		<dependency>
			<groupId>org.appxi</groupId>
			<artifactId>appxi-tome</artifactId>
			<version>21.01.00</version>
		</dependency>
		<dependency>
			<groupId>org.appxi</groupId>
			<artifactId>timeago</artifactId>
			<version>20.07.19</version>
		</dependency>


		<dependency>
			<groupId>org.appxi</groupId>
			<artifactId>hanlp-convert</artifactId>
			<version>20.07.00</version>
			<exclusions>
				<exclusion>
					<groupId>org.appxi</groupId>
					<artifactId>hanlp-chartable</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!--		<dependency>-->
<!--			<groupId>com.hankcs</groupId>-->
<!--			<artifactId>hanlp</artifactId>-->
<!--			<version>portable-1.7.8</version>-->
<!--		</dependency>-->
<!--		&lt;!&ndash; https://mvnrepository.com/artifact/com.h2database/h2 &ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>com.h2database</groupId>-->
<!--			<artifactId>h2</artifactId>-->
<!--			<version>1.4.201-SNAPSHOT</version>-->
<!--			<exclusions>-->
<!--				<exclusion>-->
<!--					<groupId>org.apache.lucene</groupId>-->
<!--					<artifactId>*</artifactId>-->
<!--				</exclusion>-->
<!--				<exclusion>-->
<!--					<groupId>javax.servlet</groupId>-->
<!--					<artifactId>*</artifactId>-->
<!--				</exclusion>-->
<!--				<exclusion>-->
<!--					<groupId>org.osgi</groupId>-->
<!--					<artifactId>*</artifactId>-->
<!--				</exclusion>-->
<!--				<exclusion>-->
<!--					<groupId>org.slf4j</groupId>-->
<!--					<artifactId>*</artifactId>-->
<!--				</exclusion>-->
<!--				<exclusion>-->
<!--					<groupId>org.locationtech.jts</groupId>-->
<!--					<artifactId>*</artifactId>-->
<!--				</exclusion>-->
<!--			</exclusions>-->
<!--		</dependency>-->
<!--		&lt;!&ndash; https://mvnrepository.com/artifact/com.dieselpoint/norm &ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>com.dieselpoint</groupId>-->
<!--			<artifactId>norm</artifactId>-->
<!--			<version>0.8.10</version>-->
<!--		</dependency>-->
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<outputDirectory>${project.build.directory}/jpackage-app
					</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>copy</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>runtime</includeScope>
							<outputDirectory>${project.build.directory}/jpackage-app/lib
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<executions>
					<execution>
						<id>default</id>
						<goals>
							<goal>perform</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>